--- a/public/css/last-changes.css
+++ b/public/css/last-changes.css
@@ -1,7 +1,6 @@
+/*start Home*/
 .legal-work {
-  padding-top: 65px;
-  padding-left: 162px;
-  padding-right: 84px;
+  padding: 65px 162px 110px 84px;
 }
 .legal-work .legal-work-content .legal-work-title {
   font-family: Metropolis, sans-serif;
@@ -21,7 +20,12 @@
   font-style: normal;
   font-weight: normal;
   font-size: 22px;
-  color: #000000;
+  color: #000;
+}
+.legal-work .legal-work-content .legal-work-text .legal-work-text-item img {
+  width: 30px;
+  height: 30px;
+  margin-right: 13px;
 }
 .legal-work .legal-work-content .legal-work-btn {
   display: flex;
@@ -51,6 +55,53 @@
   width: 100%;
 }
 
+#help_container {
+  padding: 124px 0 60px 96px;
+  margin-bottom: 100px;
+  max-width: 80%;
+}
+#help_container .help_left {
+  padding-right: 30px;
+}
+#help_container .help_left .help_text_container p:nth-child(2) {
+  max-width: 60%;
+}
+#help_container img.img-fluid {
+  align-self: center;
+  margin-right: -15%;
+  margin-top: -55px;
+  max-width: 100%;
+}
+
+/*end Home*/
+/*start About*/
+/*end About*/
+@media only screen and (max-width: 1200px) {
+  #help_container img.img-fluid {
+    max-width: 50%;
+  }
+}
+@media only screen and (max-width: 993px) {
+  #help_container img.img-fluid {
+    max-width: 55%;
+  }
+}
+@media (max-width: 860px) {
+  #help_container {
+    max-width: 100%;
+  }
+  #help_container .help_left {
+    padding: 0 40px 40px 40px;
+  }
+  #help_container .help_left .help_text_container p:nth-child(2) {
+    max-width: 100%;
+  }
+  #help_container img.img-fluid {
+    margin-right: -15%;
+    margin-top: 0;
+    max-width: 100%;
+  }
+}
 @media only screen and (max-width: 768px) {
   .legal-work-img-wrap {
     zoom: normal;
