--- a/public/css/style.css
+++ b/public/css/style.css
@@ -728,43 +728,25 @@ h2#our_clients_h2  {
 #help_container {
     background: #EAEEF5;
     border-radius: 4px;
-    width: 60%;
-    margin: 70px auto 140px auto;
+    /*width: 60%;*/
+    /*margin: 70px auto 140px auto;*/
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 
 }
 
-.help_left {
-
-}
 
 .help_left h2 {
     font-family: Metropolis;
-    margin: 124px 0 40px 54px;
     font-style: normal;
     font-weight: bold;
     font-size: 42px;
-    line-height: 120%;
     color: #241F2D;
 }
 
-#help_container img {
-    align-self: center;
-    margin-right: -18%;
-    width: 64%;
-    height: 580px;
-    max-width: 100%;
-}
-
-.help_text_container {
-    margin-left: 30%;
-    margin-right: 7%;
-}
-
 .help_text_container h5 {
-    font-family: Metropolis;
+    font-family: Metropolis, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
@@ -784,7 +766,7 @@ h2#our_clients_h2  {
 
 .help_text_container a {
     margin-top: 10px;
-    font-family: Metropolis;
+    font-family: Metropolis,sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -802,7 +784,7 @@ h2#our_clients_h2  {
 }
 
 .help_left {
-    padding-bottom: 124px;
+    /*padding-bottom: 124px;*/
 }
 
 .help_text_container h5:nth-last-of-type(1) {
