full changes profile page

--- a/public/css/translatorProfile.scss
+++ b/public/css/translatorProfile.scss
@@ -259,6 +259,13 @@ header {
                     }
                 }
 
+                .profile-rows-text{
+                    font-size: 14px;
+                    font-weight: normal;
+                    margin-bottom: 8px;
+                    line-height: 1.7em;
+                }
+
                 .profile-rows-sub-title {
                     font-size: 14px;
                     font-weight: normal;
