About page changes

--- a/public/css/last-changes.scss
+++ b/public/css/last-changes.scss
@@ -25,6 +25,7 @@
                 font-weight: normal;
                 font-size: 22px;
                 color: #000;
+
                 img {
                     width: 30px;
                     height: 30px;
@@ -104,14 +105,80 @@
 
 /*start About*/
 
+.bg-color-t {
+    background: linear-gradient(180deg, #F3F6FB 0%, #FFFFFF 100%) !important;
+}
+.goals-content {
+    .goals-bg {
+        .abs {
+            position: absolute;
+            top: -140px;
+            left: -262px;
+            bottom: 0;
+            width: 178%;
+
+            img {
+                width: 100%;
+            }
+        }
+
+        .goals-block {
+            padding: 120px 50px 122px;
+
+            .goals-block-item {
+                .goals-block-text {
+                    ul {
+                        li {
+                            list-style-type: disc;
+                        }
+                    }
+                }
+            }
+
+            .goals-block-title {
+
+            }
+        }
+
+    }
+}
+
+
 /*end About*/
 
+
+@media only screen and (max-width: 1284px) {
+    .goals-content {
+        .goals-bg {
+            .abs {
+                width: 188%;
+            }
+        }
+    }
+}
 
 @media only screen and (max-width: 1200px) {
     #help_container {
         img {
             &.img-fluid {
                 max-width: 50%;
+            }
+        }
+    }
+    .goals-content {
+        .goals-bg {
+            .abs {
+                width: 192%;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1120px) {
+    .goals-content {
+        .goals-bg {
+            .abs {
+                width: 202%;
             }
         }
     }
@@ -142,7 +209,7 @@
         img {
             &.img-fluid {
                 margin-right: -15%;
-                 margin-top: 0;
+                margin-top: 0;
                 max-width: 100%;
             }
         }
