--- a/public/css/last-changes.css
+++ b/public/css/last-changes.css
@@ -1,1 +1,145 @@
-.legal-work{padding:65px 162px 110px 84px}.legal-work .legal-work-content .legal-work-title{font-family:Metropolis,sans-serif;font-style:normal;font-weight:bold;font-size:42px;text-transform:capitalize;color:#241f2d;padding-top:8px}.legal-work .legal-work-content .legal-work-text{padding-top:55px}.legal-work .legal-work-content .legal-work-text .legal-work-text-item{padding-top:29px;font-family:Metropolis,sans-serif;font-style:normal;font-weight:normal;font-size:22px;color:#000}.legal-work .legal-work-content .legal-work-text .legal-work-text-item img{width:30px;height:30px;margin-right:13px}.legal-work .legal-work-content .legal-work-btn{display:flex;flex-direction:column;padding:12px 20px;width:180px;height:44px;background:#f54838;border-radius:4px;text-decoration:none;font-family:Metropolis,sans-serif;font-style:normal;font-weight:600;font-size:15px;color:#fff;margin:0;margin-top:80px}.legal-work-img-wrap{position:relative}.legal-work-img-wrap .image-wrap{position:absolute}.legal-work-img-wrap .image-wrap .legal-work-img{width:100%}#help_container{padding:124px 0 60px 96px;margin-bottom:100px;max-width:80%}#help_container .help_left{padding-right:30px}#help_container .help_left .help_text_container p:nth-child(2){max-width:60%}#help_container img.img-fluid{align-self:center;margin-right:-15%;margin-top:-55px;max-width:100%}@media only screen and (max-width: 1200px){#help_container img.img-fluid{max-width:50%}}@media only screen and (max-width: 993px){#help_container img.img-fluid{max-width:55%}}@media(max-width: 860px){#help_container{max-width:100%}#help_container .help_left{padding:0 40px 40px 40px}#help_container .help_left .help_text_container p:nth-child(2){max-width:100%}#help_container img.img-fluid{margin-right:-15%;margin-top:0;max-width:100%}}@media only screen and (max-width: 768px){.legal-work-img-wrap{zoom:normal}}/*# sourceMappingURL=last-changes.css.map */
+/*start Home*/
+.legal-work {
+  padding: 65px 162px 110px 84px;
+}
+.legal-work .legal-work-content .legal-work-title {
+  font-family: Metropolis, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 42px;
+  text-transform: capitalize;
+  color: #241F2D;
+  padding-top: 8px;
+}
+.legal-work .legal-work-content .legal-work-text {
+  padding-top: 55px;
+}
+.legal-work .legal-work-content .legal-work-text .legal-work-text-item {
+  padding-top: 29px;
+  font-family: Metropolis, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  color: #000;
+}
+.legal-work .legal-work-content .legal-work-text .legal-work-text-item img {
+  width: 30px;
+  height: 30px;
+  margin-right: 13px;
+}
+.legal-work .legal-work-content .legal-work-btn {
+  display: flex;
+  flex-direction: column;
+  padding: 12px 20px;
+  width: 180px;
+  height: 44px;
+  background: #F54838;
+  border-radius: 4px;
+  text-decoration: none;
+  font-family: Metropolis, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  color: #FFFFFF;
+  margin: 0;
+  margin-top: 80px;
+}
+
+.legal-work-img-wrap {
+  position: relative;
+}
+.legal-work-img-wrap .image-wrap {
+  position: absolute;
+}
+.legal-work-img-wrap .image-wrap .legal-work-img {
+  width: 100%;
+}
+
+#help_container {
+  padding: 124px 0 60px 96px;
+  margin-bottom: 100px;
+  max-width: 80%;
+}
+#help_container .help_left {
+  padding-right: 30px;
+}
+#help_container .help_left .help_text_container p:nth-child(2) {
+  max-width: 60%;
+}
+#help_container img.img-fluid {
+  align-self: center;
+  margin-right: -15%;
+  margin-top: -55px;
+  max-width: 100%;
+}
+
+/*end Home*/
+/*start About*/
+.bg-color-t {
+  background: linear-gradient(180deg, #F3F6FB 0%, #FFFFFF 100%) !important;
+}
+
+.goals-content .goals-bg .abs {
+  position: absolute;
+  top: -140px;
+  left: -262px;
+  bottom: 0;
+  width: 178%;
+}
+.goals-content .goals-bg .abs img {
+  width: 100%;
+}
+.goals-content .goals-bg .goals-block {
+  padding: 120px 50px 122px;
+}
+.goals-content .goals-bg .goals-block .goals-block-item .goals-block-text ul li {
+  list-style-type: disc;
+}
+/*end About*/
+@media only screen and (max-width: 1284px) {
+  .goals-content .goals-bg .abs {
+    width: 188%;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  #help_container img.img-fluid {
+    max-width: 50%;
+  }
+
+  .goals-content .goals-bg .abs {
+    width: 192%;
+  }
+}
+@media only screen and (max-width: 1120px) {
+  .goals-content .goals-bg .abs {
+    width: 202%;
+  }
+}
+@media only screen and (max-width: 993px) {
+  #help_container img.img-fluid {
+    max-width: 55%;
+  }
+}
+@media (max-width: 860px) {
+  #help_container {
+    max-width: 100%;
+  }
+  #help_container .help_left {
+    padding: 0 40px 40px 40px;
+  }
+  #help_container .help_left .help_text_container p:nth-child(2) {
+    max-width: 100%;
+  }
+  #help_container img.img-fluid {
+    margin-right: -15%;
+    margin-top: 0;
+    max-width: 100%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .legal-work-img-wrap {
+    zoom: normal;
+  }
+}
+
+/*# sourceMappingURL=last-changes.css.map */
