--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,7 +141,15 @@ a.default_header_sign_in {
 
 .my_container {
     max-width: 1208px;
-    margin: auto!important;
+    margin: auto;
+    position: relative;
+}
+
+#header_white{
+    position:absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 #header2_navbar {
@@ -392,10 +400,9 @@ label.active {
 
 #translators_container_block {
     width: 100%;
-    margin: auto;
-    padding-top: 40px;
+    margin-top: 100px;
     background: #FFFFFF;
-    box-shadow: 0px 12px 48px rgba(118, 116, 125, 0.08), 0px 1px 1px rgba(118, 116, 125, 0.2);
+    box-shadow: 0 12px 48px rgba(118, 116, 125, 0.08), 0 1px 1px rgba(118, 116, 125, 0.2);
     border-radius: 4px;
 }
 
