--- a/public/css/last-changes.scss
+++ b/public/css/last-changes.scss
@@ -1,4 +1,5 @@
 /*start Home*/
+
 .legal-work {
     padding: 65px 162px 110px 84px;
 
@@ -60,10 +61,7 @@
 }
 
 .legal-work-img-wrap {
-    //width: 100px;
-    //width: 466px;
-    //height: 350px;
-    //zoom: 1.9;
+
     position: relative;
 
     .image-wrap {
@@ -74,6 +72,38 @@
             width: 100%;
         }
     }
+}
+
+.translators_container_block_row {
+    &:nth-child(1) {
+        .translators_block_rows {
+            &:nth-child(1) {
+                border-top-left-radius: 4px;
+            }
+
+            &:nth-child(4) {
+                border-top-right-radius: 4px;
+            }
+
+        }
+    }
+
+    &:nth-child(2) {
+        .translators_block_rows {
+            &:nth-child(1) {
+                border-bottom-left-radius: 4px;
+            }
+
+            &:nth-child(4) {
+                border-top-right-radius: 4px;
+            }
+        }
+    }
+}
+
+#translators_container_block {
+    padding-top: 0 !important;
+    margin-top: 40px !important;
 }
 
 #help_container {
@@ -108,6 +138,7 @@
 .bg-color-t {
     background: linear-gradient(180deg, #F3F6FB 0%, #FFFFFF 100%) !important;
 }
+
 .goals-content {
     .goals-bg {
         .abs {
@@ -143,9 +174,37 @@
     }
 }
 
-
 /*end About*/
 
+/*start Profile page*/
+
+.per-hour-border {
+    border: 1px solid #ced4da;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+
+    option {
+        font-size: 14px !important;
+    }
+
+    .btn {
+        color: #241F2D;
+        font-size: 14px;
+        vertical-align: middle;
+    }
+}
+.languages-select {
+    div, select, option {
+        color: #241F2D;
+        font-size: 14px;
+        vertical-align: middle;
+    }
+    select {
+        padding: 8px 12px;
+    }
+}
+
+/*end Profile page*/
 
 @media only screen and (max-width: 1284px) {
     .goals-content {
@@ -222,6 +281,31 @@
     .legal-work-img-wrap {
         zoom: normal;
     }
+    .content {
+        .profile {
+            .profile-section {
+                &.practice-location-section {
+                    input {
+                        color: #241F2D;
+                        padding: 8px 12px;
+                        border: 1px solid #D6D5D7;
+                        font-size: 14px;
+
+                    }
+
+                    input[name='profile[country]'],
+                    input[name='profile[state]'],
+                    input[name='profile[city]'],
+                    input[name='profile[address]'] {
+                        border-radius: 4px;
+                    }
+
+                }
+            }
+        }
+    }
+
+
 }
 
 
