--- a/public/css/lawyerProfile.scss
+++ b/public/css/lawyerProfile.scss
@@ -3,7 +3,7 @@ $base-orange: #F54838;
 @import "fonts";
 
 body {
-    font-family: MetropolisRegular, sans-serif;
+    font-family: Metropolis, sans-serif;
     font-weight: normal;
 }
 
