--- a/public/css/lawyerProfile.scss
+++ b/public/css/lawyerProfile.scss
@@ -405,7 +405,7 @@ header {
                     padding: 8px 12px;
                     border: 1px solid #D6D5D7;
                     font-size: 14px;
-                    background-image: url(../img/arrow-bottom.png);
+                    //background-image: url(../img/arrow-bottom.png);
                     background-position: 98% center;
                     background-repeat: no-repeat;
                     padding-right: 4px;
@@ -413,6 +413,9 @@ header {
 
                 .form-control {
                     border-radius: 0;
+                    border: 1px solid #d6d5d7;
+                    border-top-left-radius: 4px;
+                    border-bottom-left-radius: 4px;
                 }
 
                 input[name='profile[country]'] {
@@ -420,9 +423,8 @@ header {
                     border-bottom-left-radius: 4px;
                 }
 
-                input[name='profile[state]'] {
-                    border-top-right-radius: 4px;
-                    border-bottom-right-radius: 4px;
+                input[name='profile[state]'],input[name='profile[address]']  {
+                    border-radius: 0 4px 4px 0;
                 }
 
                 input[name='profile[city]'] {
@@ -430,10 +432,12 @@ header {
                     border-bottom-left-radius: 4px;
                 }
 
-                input[name='profile[address]'] {
-                    border-top-right-radius: 4px;
-                    border-bottom-right-radius: 4px;
-                }
+                //dropdown bootstrap-select per-hour-border form-control
+                //select {
+                //    border: 1px solid #d6d5d7;
+                //    border-top-left-radius: 4px;
+                //    border-bottom-left-radius: 4px;
+                //}
             }
 
             /*start upload btn */
