--- a/public/css/login-popup.scss
+++ b/public/css/login-popup.scss
@@ -1,6 +1,7 @@
 * {
     font-family: Metropolis, sans-serif;
 }
+
 #login_modal {
     .modal-content {
         //padding-left: 40px;
@@ -27,6 +28,18 @@
                     color: #3F3B48;
 
                 }
+                span {
+                    //min-width: 100px;
+                    &.form-control {
+                        &.error-message {
+                            background-color: rgba(220, 53, 69, 0.1) ;
+                            border: 1px solid #dc3545;
+                            border-radius: 4px;
+                            padding: 12px 16px;
+                            height: 48px;
+                        }
+                    }
+                }
 
                 input {
                     padding: 14px 16px;
@@ -45,11 +58,26 @@
                         color: #241F2D;
                     }
 
-                    &#remember_me {
+                    &#remember {
                         width: 20px;
                         height: 20px;
                         margin-right: 8px;
                     }
+                }
+
+                .login-popup-btn {
+                    background: #F54838;
+                    border-color: #F54838;
+                    border-radius: 4px;
+                    font-weight: 600;
+                    font-size: 15px;
+                    line-height: 20px;
+
+                    color: #FFFFFF;
+                    padding-bottom: 12px;
+                    padding-top: 12px;
+                    margin-top: 24px;
+                    margin-bottom: 24px;
                 }
             }
 
@@ -72,21 +100,6 @@
 
             margin-bottom: 40px;
             border-top: none;
-
-            .login-popup-btn {
-                background: #F54838;
-                border-color: #F54838;
-                border-radius: 4px;
-                font-weight: 600;
-                font-size: 15px;
-                line-height: 20px;
-
-                color: #FFFFFF;
-                padding-bottom: 12px;
-                padding-top: 12px;
-                margin-top: 24px;
-                margin-bottom: 24px;
-            }
 
             .modal-footer-text {
                 font-size: 14px;
