--- a/public/css/clientProfile.scss
+++ b/public/css/clientProfile.scss
@@ -34,15 +34,16 @@ header {
 
     .header-t {
         padding: 0 116px;
-        //height: 80px;
+
+        .navbar-brand {
+            &.logo {
+                margin-right: 11% !important;
+            }
+        }
+
         .navbar {
             padding: 10px 0;
         }
-    }
-
-    .search-block {
-        width: 37%;
-        margin-left: 80px;
     }
 
     .nav-item {
@@ -72,33 +73,18 @@ header {
     }
 }
 
-.btn-search {
-    background: $base-orange;
-    border: none;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    outline: none;
-    color: #fff;
-    padding: 8px 17px;
-    font-weight: 600;
-    font-size: 14px;
-    margin: 0;
-
-    &:hover, &:active {
-        background-color: darken($base-orange, 7%);
-        color: #fff;
-
-    }
-
-}
-
-.nav {
+nav {
     .nav-item {
         font-weight: 600;
         font-size: 14px;
 
-        a {
+        .nav-link {
+            &.active {
+                border-bottom: 2px solid $base-orange;
+            }
+
             color: #241F2D;
+
         }
     }
 }
@@ -129,21 +115,21 @@ header {
         line-height: 20px;
         padding-left: 0;
 
-        .item {
+        .nav-item {
             padding: 8px 0 8px 14px;
 
             a {
                 text-decoration: none;
-                color: #76747D;
+                color: #241F2D;
             }
         }
 
-        .active {
-            border-left: 2px solid;
-            border-left-color: $base-orange;
+        a {
 
-            a {
-                color: #241F2D;
+            &.active {
+                border-left: 2px solid;
+                border-left-color: $base-orange;
+
             }
         }
     }
@@ -423,7 +409,7 @@ header {
                     border-bottom-left-radius: 4px;
                 }
 
-                input[name='profile[state]'],input[name='profile[address]']  {
+                input[name='profile[state]'], input[name='profile[address]'] {
                     border-radius: 0 4px 4px 0;
                 }
 
