--- a/public/css/post-history.css
+++ b/public/css/post-history.css
@@ -1,122 +1,1 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css");
-@font-face {
-  font-family: "Metropolis";
-  src: url("fonts/Metropolis/Metropolis-Regular.eot");
-  /* IE9*/
-  src: url("fonts/Metropolis/Metropolis-Regular.eot?#iefix") format("embedded-opentype"), url("fonts/Metropolis/Metropolis-Regular.otf") format("otf"), url("fonts/Metropolis/Metropolis-Regular.woff2") format("woff2"), url("fonts/Metropolis/Metropolis-Regular.woff") format("woff"), url("fonts/Metropolis/Metropolis-Regular.ttf") format("truetype"), url("fonts/Metropolis/Metropolis-Regular.svg#Metropolis") format("svg");
-  /* iOS 4.1- */
-}
-.show-read-more .more-text {
-  display: none;
-}
-
-.posts-block {
-  padding-top: 90px;
-  /*more */
-}
-.posts-block .posts-title {
-  font-weight: 600;
-  font-size: 34px;
-  text-transform: capitalize;
-  color: #000000;
-}
-.posts-block .posts-sort-block {
-  padding-top: 12px;
-  padding-bottom: 40px;
-  color: #555555;
-  font-weight: 500;
-  font-size: 13px;
-  line-height: 16px;
-}
-.posts-block .posts-sort-block span {
-  color: #000000;
-}
-.posts-block .posts-sort-block span i, .posts-block .posts-sort-block span svg {
-  color: #555555;
-  font-size: 10px;
-  margin-left: 8px;
-}
-.posts-block .post-item {
-  padding-top: 20px;
-  padding-left: 20px;
-  padding-bottom: 36px;
-}
-.posts-block .post-item .post-item-title {
-  font-size: 20px;
-  line-height: 24px;
-  color: #000000;
-}
-.posts-block .post-item .post-item-text {
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 20px;
-  color: #000000;
-  padding-top: 8px;
-  padding-bottom: 35px;
-}
-.posts-block .post-item .post-item-text .read-more {
-  padding-left: 8px;
-  color: #F45644;
-}
-.posts-block .post-item .posts-spec-block h6 {
-  font-weight: 600;
-  font-size: 13px;
-  line-height: 18px;
-  text-decoration: underline;
-  text-decoration-color: rgba(118, 116, 125, 0.6);
-  color: #241F2D;
-  margin: 4px 0;
-}
-.posts-block .post-item .posts-spec-block h6.title {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 18px;
-  color: #76747D;
-  margin: 4px;
-  text-decoration-line: none;
-}
-.posts-block .post-item .post-item-sub-title {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 24px;
-  color: #000000;
-  padding-bottom: 8px;
-}
-.posts-block .post-item .post-item-posted-time {
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 20px;
-  color: #666666;
-  padding-bottom: 8px;
-}
-.posts-block .post-item .post-item-bids-count {
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 20px;
-  color: #666666;
-  padding-bottom: 45px;
-}
-.posts-block .post-item .post-item-bids-count span {
-  color: #000000;
-}
-.posts-block .post-item .post-item-event-block {
-  font-size: 20px;
-}
-.posts-block .post-item .post-item-event-block .fa-trash-alt {
-  color: #f45644;
-}
-.posts-block .post-item .post-item-event-block .fa-edit {
-  color: #666666;
-}
-.posts-block a.morelink {
-  text-decoration: none;
-  outline: none;
-}
-.posts-block .morecontent span {
-  display: none;
-}
-.posts-block .comment {
-  margin: 10px;
-}
-
-/*# sourceMappingURL=post-history.css.map */
+@import"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css";@font-face{font-family:"Metropolis";src:url("fonts/Metropolis/Metropolis-Regular.eot");src:url("fonts/Metropolis/Metropolis-Regular.eot?#iefix") format("embedded-opentype"),url("fonts/Metropolis/Metropolis-Regular.otf") format("otf"),url("fonts/Metropolis/Metropolis-Regular.woff2") format("woff2"),url("fonts/Metropolis/Metropolis-Regular.woff") format("woff"),url("fonts/Metropolis/Metropolis-Regular.ttf") format("truetype"),url("fonts/Metropolis/Metropolis-Regular.svg#Metropolis") format("svg")}.show-read-more .more-text{display:none}.posts-block{padding-top:90px}.posts-block .posts-title{font-weight:600;font-size:34px;text-transform:capitalize;color:#000}.posts-block .posts-sort-block{padding-top:12px;padding-bottom:40px;color:#555;font-weight:500;font-size:13px;line-height:16px}.posts-block .posts-sort-block span{color:#000}.posts-block .posts-sort-block span i,.posts-block .posts-sort-block span svg{color:#555;font-size:10px;margin-left:8px}.posts-block .post-item{padding-top:20px;padding-left:20px;padding-bottom:36px}.posts-block .post-item .post-item-title{font-size:20px;line-height:24px;color:#000}.posts-block .post-item .post-item-text{font-weight:normal;font-size:14px;line-height:20px;color:#000;padding-top:8px;padding-bottom:35px}.posts-block .post-item .post-item-text .read-more{padding-left:8px;color:#f45644}.posts-block .post-item .posts-spec-block h6{font-weight:600;font-size:13px;line-height:18px;text-decoration:underline;text-decoration-color:rgba(118,116,125,.6);color:#241f2d;margin:4px 0}.posts-block .post-item .posts-spec-block h6.title{font-weight:500;font-size:14px;line-height:18px;color:#76747d;margin:4px;text-decoration-line:none}.posts-block .post-item .post-item-sub-title{font-weight:500;font-size:18px;line-height:24px;color:#000;padding-bottom:8px}.posts-block .post-item .post-item-posted-time{font-weight:normal;font-size:14px;line-height:20px;color:#666;padding-bottom:8px}.posts-block .post-item .post-item-bids-count{font-weight:normal;font-size:14px;line-height:20px;color:#666;padding-bottom:45px}.posts-block .post-item .post-item-bids-count span{color:#000}.posts-block .post-item .post-item-event-block{font-size:20px}.posts-block .post-item .post-item-event-block .fa-trash-alt{color:#f45644}.posts-block .post-item .post-item-event-block .fa-edit{color:#666}.posts-block a.morelink{text-decoration:none;outline:none}.posts-block .morecontent span{display:none}.posts-block .comment{margin:10px}/*# sourceMappingURL=post-history.css.map */
