--- a/public/css/clientProfile.css
+++ b/public/css/clientProfile.css
@@ -72,7 +72,7 @@ nav .nav-item .nav-link {
   color: #241F2D;
 }
 nav .nav-item .nav-link.active {
-  border-bottom: 2px solid #F54838;
+  border-bottom: 2px solid #f54838;
 }
 
 .message-isset {
@@ -86,7 +86,7 @@ nav .nav-item .nav-link.active {
   content: "";
   width: 6px;
   height: 6px;
-  background-color: #F54838;
+  background-color: #f54838;
   border-radius: 50%;
 }
 
@@ -108,7 +108,7 @@ nav .nav-item .nav-link.active {
 }
 .content .left-list a.active {
   border-left: 2px solid;
-  border-left-color: #F54838;
+  border-left-color: #f54838;
 }
 .content .right-block {
   background: #FFFFFF;
@@ -490,7 +490,7 @@ nav .nav-item .nav-link.active {
   padding-left: 10px;
 }
 .content .profile .profile-section .btn-verification {
-  background: #F54838;
+  background: #f54838;
   border: none;
   border-radius: 4px;
   outline: none;
