--- a/public/css/post-history.css
+++ b/public/css/post-history.css
@@ -12,7 +12,8 @@
 
 .posts-block {
   padding-top: 90px;
-  /*more */
+  /*more , less */
+  /*more , less */
 }
 .posts-block .posts-title {
   font-weight: 600;
@@ -108,15 +109,113 @@
 .posts-block .post-item .post-item-event-block .fa-edit {
   color: #666666;
 }
+.posts-block .post-item .post-item-event-block .fa-bookmark {
+  color: #000;
+}
 .posts-block a.morelink {
   text-decoration: none;
   outline: none;
+  color: #f45644;
 }
 .posts-block .morecontent span {
   display: none;
 }
 .posts-block .comment {
   margin: 10px;
+}
+
+/* find a job page */
+.find-job-form {
+  border-radius: 3px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 34px;
+  margin-bottom: 48px;
+}
+.find-job-form .btn-group:nth-child(1) {
+  width: 90%;
+}
+.find-job-form .btn-group:nth-child(2) {
+  width: 10%;
+}
+.find-job-form .find-job-select-item {
+  background: #FFFFFF;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+  border: 1px solid #ccc;
+  border-radius: 0;
+  padding: 10.5px 16px;
+  width: 33.33333333%;
+}
+.find-job-form .find-job-select-item .find-job-select-title {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+  color: #97959D;
+}
+.find-job-form .find-job-select-item .dropdown-toggle {
+  font-weight: 500;
+  font-size: 15px;
+  color: #000000;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  padding-top: 5px;
+}
+.find-job-form .find-job-select-item .dropdown-menu {
+  margin-left: -16px;
+}
+.find-job-form .find-job-select-item .dropdown-menu.show {
+  width: 33.1%;
+}
+.find-job-form .find-job-select-item .dropdown-menu .dropdown-items-wrap {
+  display: flex;
+  flex-direction: column;
+}
+.find-job-form .find-job-select-item .dropdown-menu .dropdown-items-wrap a {
+  color: #000000;
+}
+.find-job-form .find-job-search-btn {
+  background-color: #F54838;
+  padding: 20px 40px;
+  border: transparent;
+  color: #fff;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+
+.filter-form {
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+.filter-form .filter-dropdowns-block .filter-item {
+  font-size: 14px;
+  line-height: 20px;
+  border: 1px solid #999999;
+  color: #555555;
+  border-radius: 3px;
+  padding: 8px 12px;
+}
+.filter-form .filter-dropdowns-block .filter-item .filter-btn:before {
+  color: #999999;
+}
+.filter-form .filter-dropdowns-block .filter-item .filter-btn:after {
+  border: 0;
+}
+.filter-form .filter-dropdowns-block .filter-item .filter-btn.filter-btn-raiting:before {
+  content: "Raiting: ";
+}
+.filter-form .filter-dropdowns-block .filter-item .filter-btn.filter-btn-price:before {
+  content: "Price: ";
+}
+.filter-form .filter-dropdowns-block .filter-item .filter-btn.filter-btn-loc:before {
+  content: "Location: ";
+}
+.filter-form .filter-dropdowns-block .filter-item .filter-close {
+  background: transparent;
+  border: none;
+  color: #999999;
 }
 
 /*# sourceMappingURL=post-history.css.map */
