--- a/public/css/post-history.scss
+++ b/public/css/post-history.scss
@@ -54,6 +54,7 @@
             font-weight: normal;
             font-size: 14px;
             line-height: 20px;
+            margin: 0;
 
             color: #000000;
             .read-more {
@@ -123,6 +124,16 @@
 
         .post-item-event-block {
             font-size: 20px;
+
+            form{
+                display: inline-block;
+
+                button{
+                    background: transparent;
+                    border: none;
+                }
+            }
+
             .fa-trash-alt {
                 color: #f45644;
             }
