--- a/public/css/clientProfile.scss
+++ b/public/css/clientProfile.scss
@@ -390,8 +390,6 @@ nav {
                     color: #241F2D;
                     padding: 8px 12px;
                     border: 1px solid #D6D5D7;
-                    font-size: 14px;
-                    //background-image: url(../img/arrow-bottom.png);
                     background-position: 98% center;
                     background-repeat: no-repeat;
                     padding-right: 4px;
@@ -400,30 +398,21 @@ nav {
                 .form-control {
                     border-radius: 0;
                     border: 1px solid #d6d5d7;
+                }
+
+                .per-hour-border, input[name='country'] {
                     border-top-left-radius: 4px;
                     border-bottom-left-radius: 4px;
                 }
 
-                input[name='profile[country]'] {
-                    border-top-left-radius: 4px;
-                    border-bottom-left-radius: 4px;
-                }
-
-                input[name='profile[state]'], input[name='profile[address]'] {
+                input[name='state'], input[name='address'] {
                     border-radius: 0 4px 4px 0;
                 }
 
-                input[name='profile[city]'] {
+                input[name='city'] {
                     border-top-left-radius: 4px;
                     border-bottom-left-radius: 4px;
                 }
-
-                //dropdown bootstrap-select per-hour-border form-control
-                //select {
-                //    border: 1px solid #d6d5d7;
-                //    border-top-left-radius: 4px;
-                //    border-bottom-left-radius: 4px;
-                //}
             }
 
             /*start upload btn */
@@ -873,6 +862,6 @@ nav {
 
 /* Developer 007 */
 
-.select-border{
+.select-border {
     border: 1px solid #ced4da !important;
 }
