--- a/public/css/post-history.css
+++ b/public/css/post-history.css
@@ -41,6 +41,7 @@
   padding-top: 20px;
   padding-left: 20px;
   padding-bottom: 36px;
+  width: 100%;
 }
 .posts-block .post-item .post-item-title {
   font-size: 20px;
@@ -103,6 +104,13 @@
 }
 .posts-block .post-item .post-item-event-block {
   font-size: 20px;
+}
+.posts-block .post-item .post-item-event-block.event-bookmark {
+  margin-top: 40px;
+  margin-right: 40px;
+}
+.posts-block .post-item .post-item-event-block.event-bookmark a .fa-bookmark:active, .posts-block .post-item .post-item-event-block.event-bookmark a .fa-bookmark:hover, .posts-block .post-item .post-item-event-block.event-bookmark a .fa-bookmark:focus {
+  color: #F54838;
 }
 .posts-block .post-item .post-item-event-block form {
   display: inline-block;
@@ -224,6 +232,51 @@
   background: transparent;
   border: none;
   color: #999999;
+}
+@media only screen and (max-width: 993px) {
+  .find-job-form {
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .find-job-form .btn-group:nth-child(1) {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+  }
+  .find-job-form .btn-group:nth-child(1) .find-job-select-item {
+    width: 100%;
+  }
+  .find-job-form .btn-group:nth-child(2) {
+    width: 90%;
+    margin: auto;
+  }
+  .find-job-form .btn-group:nth-child(2) .find-job-search-btn {
+    width: 100%;
+  }
+
+  .posts-block .post-item .post-item-event-block.event-bookmark {
+    margin-top: 0;
+    margin-right: 40px;
+  }
+
+  .posts-block .row {
+    margin-right: 15px !important;
+    margin-left: 15px !important;
+  }
+
+  .h-100 {
+    height: auto !important;
+  }
+
+  .filter-dropdowns-block {
+    justify-content: center;
+  }
+
+  .card {
+    justify-content: center;
+  }
 }
 
 /*# sourceMappingURL=post-history.css.map */
