--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -295,60 +295,18 @@
 }
 /*---------------home page end------------------*/
 
-@media only screen and (max-width: 768px){
-    .homeMainTextS{
-        padding: 60px;
 
-    }
-    .logoAndMenu{
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    .logo{
-        margin-right: 20px;
 
+@media (max-width: 1110px) {
+    .footer_1_block p {
+        flex: 1.3;
+        margin-right: 10%;
     }
-    #footerLi {
-        width: 90%;
-    }
-    .menuA{
-        margin-right: 10px;
-    }
-
 }
-
-@media only screen and (max-width: 490px){
-    .responsiveMenuA{
-        width: 45px;
-    }
-    .registrationDivS{
-        flex-wrap: wrap;
-    }
-
-    .registrationDiv{
-        margin-bottom: 60px;
-
-    }
-    .registrationMainTitle{
-        margin: 60px 0 16px 0;
-
-    }
-    .menuLoginAndSignup {
-        margin-top: 10px;
-
-    }
-
-}
-
-@media (max-width: 1105px){
+@media (max-width: 1105px) {
     footer {
         padding: 80px 30px;
 
-    }
-
-    .footer_1_block p {
-        flex: 1.3;
-        margin-right: 2%;
     }
 
     .to-right {
@@ -373,16 +331,47 @@
         height: auto!important;
     }
 }
+@media (max-width: 993px) {
 
-@media (max-width: 750px){
     .footer_container {
-        flex-direction: column!important;
-        justify-content: center!important;
+        flex-direction: column !important;
+        justify-content: center !important;
         text-align: center;
     }
+    .soc {
+        justify-content: center;
+    }
+    .footer_1_block p {
+        flex: 1.3;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+}
+@media only screen and (max-width: 768px){
+    .homeMainTextS{
+        padding: 60px;
+
+    }
+    .logoAndMenu{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .logo{
+        margin-right: 20px;
+
+    }
+    #footerLi {
+        width: 90%;
+    }
+    .menuA{
+        margin-right: 10px;
+    }
+
+}
+
+@media (max-width: 750px){
 
     .footer_1_block p {
-        margin-right: 0;
         padding: 0;
         text-align: center;
     }
@@ -424,12 +413,33 @@
         width: 95%;
         margin: 50px auto;
     }
-}
 
-@media (max-width: 630px){
     #code_from_email_container p {
         padding: 0 20px;
     }
+}
+
+@media only screen and (max-width: 490px){
+    .responsiveMenuA{
+        width: 45px;
+    }
+    .registrationDivS{
+        flex-wrap: wrap;
+    }
+
+    .registrationDiv{
+        margin-bottom: 60px;
+
+    }
+    .registrationMainTitle{
+        margin: 60px 0 16px 0;
+
+    }
+    .menuLoginAndSignup {
+        margin-top: 10px;
+
+    }
+
 }
 
 @media (max-width: 425px){
