--- a/public/css/howItWorks.css
+++ b/public/css/howItWorks.css
@@ -27,7 +27,7 @@ section.container {
     padding: 10px 24px;
     font-size: 14px;
     font-weight: 500;
-    color: #76747D;
+    color: #000;
     background: #F5F5F5;
     display: inline-block;
     outline: none;
