--- a/public/css/last-changes.scss
+++ b/public/css/last-changes.scss
@@ -2,6 +2,9 @@
     font-family: Metropolis, sans-serif;
 }
 
+$base-orange: #f54838;
+
+
 /* start header menu */
 header {
 
@@ -53,8 +56,100 @@ header {
 
 /*start Home*/
 
+/* home form */
+.pos-r {
+    position: relative;
+    top: 32px;
+}
+
+.home-search-form {
+    border-radius: 3px;
+    display: flex;
+    justify-content: space-between;
+    //margin-top: 34px;
+    //margin-bottom: 48px;
+
+    .btn-group {
+        &:nth-child(1) {
+            width: 90%;
+        }
+
+        &:nth-child(2) {
+            width: 10%;
+        }
+    }
+
+    .home-search-select-item {
+        background: #FFFFFF;
+        box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+
+        border: 1px solid #ccc;
+        border-radius: 0;
+        padding: 10.5px 16px 0;
+        width: 33.33333333%;
+
+        .home-search-select-title {
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 14px;
+            color: #97959D;
+            text-align: start;
+
+        }
+
+        .dropdown-toggle, select {
+            font-weight: 500;
+            font-size: 15px;
+
+            color: #000000;
+
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0;
+            padding-top: 5px;
+            border: none;
+
+            &:focus {
+                box-shadow: none;
+            }
+
+        }
+
+        .dropdown-menu {
+            margin-left: -16px;
+
+            &.show {
+                width: 33.1%;
+            }
+
+            .dropdown-items-wrap {
+                display: flex;
+                flex-direction: column;
+
+                a {
+                    color: #000000;
+                }
+            }
+
+        }
+    }
+
+    .home-search-search-btn {
+        background-color: $base-orange;
+        padding: 20px 30px;
+        border: transparent;
+        color: #fff;
+        border-top-right-radius: 3px;
+        border-bottom-right-radius: 3px;
+        font-weight: bold;
+    }
+}
+
+
 .legal-work {
-    padding: 65px 162px 110px 84px;
+    padding: 65px 10px 110px 84px;
 
     .legal-work-content {
         .legal-work-title {
@@ -374,6 +469,7 @@ header {
         }
     }
 }
+
 @media only screen and (max-width: 1056px) {
     header {
         .logo {
@@ -381,11 +477,13 @@ header {
         }
     }
 }
+
 @media only screen and (max-width: 993px) {
     header {
         .logo {
             margin-right: 9% !important;
         }
+
         #header_white .nav-item .nav-link.active {
             width: 130px;
         }
@@ -401,19 +499,50 @@ header {
     .goals-content {
         .goals-bg {
             .abs {
-              display: none;
+                display: none;
             }
         }
     }
 
+    .sm-center {
+        justify-content: center;
+    }
+
+    .home-search-form {
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+
+
+        .btn-group:nth-child(1) {
+            width: 90%;
+            display: flex;
+            flex-direction: column;
+            margin: auto;
+
+            .home-search-select-item {
+                width: 100%;
+            }
+        }
+
+        .btn-group:nth-child(2) {
+            width: 90%;
+            margin: auto;
+
+            .home-search-search-btn {
+                width: 100%;
+            }
+        }
+    }
 }
- 
+
 @media (max-width: 860px) {
     #help_container {
         max-width: 100%;
         padding: 124px 96px 60px 96px;
+
         .help_left {
-            padding: 0 40px 40px 40px;
+            padding: 0 10px 20px;
 
             .help_text_container p:nth-child(2) {
                 max-width: 100%;
@@ -435,6 +564,9 @@ header {
 @media only screen and (max-width: 768px) {
     .legal-work-img-wrap {
         zoom: normal;
+    }
+    .legal-work {
+        padding: 25px 0 318px 0;
     }
     .content {
         .profile {
@@ -463,4 +595,29 @@ header {
 
 }
 
+@media only screen and (max-width: 480px) {
+    .legal-work {
+        padding: 25px 0 230px 0;
+    }
 
+    .legal-work-img-wrap .image-wrap .legal-work-img {
+        width: 100%;
+        padding-top: 25px;
+    }
+
+    .legal-work .legal-work-content .legal-work-text .legal-work-text-item {
+        font-size: 18px;
+    }
+}
+
+@media only screen and (max-width: 432px) {
+    .legal-work .legal-work-content .legal-work-text .legal-work-text-item {
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    .legal-work .legal-work-content .legal-work-text .legal-work-text-item {
+        font-size: 13px;
+    }
+}
