--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,7 +119,10 @@ a.default_header_sign_in {
     right: 0;
     margin: auto;
 }
-#header_white {}
+
+#header_white {
+}
+
 #header2_navbar {
     padding: 30px 0 0 0 !important;
 }
@@ -198,10 +201,9 @@ li.home_header_default_link_signup a {
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-    margin: 0 auto -32px auto;
+    margin: 0 auto;
     padding: 0 !important;
     z-index: 2222 !important;
-    box-shadow: 0px 12px 48px rgba(118, 116, 125, 0.08), 0px 1px 1px rgba(118, 116, 125, 0.2) !important;
 }
 
 #home_form_button_block button {
@@ -2123,10 +2125,10 @@ footer {
 
 /* footer end */
 
-.result-not-found{
+.result-not-found {
     padding: 40px;
     text-align: center;
-    border: 1px solid rgba(0,0,0,.125);
+    border: 1px solid rgba(0, 0, 0, .125);
     margin: 25px 0;
     border-radius: 3px;
     font-size: 30px;
@@ -2134,3 +2136,6 @@ footer {
     color: #f54838;
 }
 
+button:focus, input:focus, select:focus {
+    outline: none;
+}
